--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -229,8 +229,11 @@
 <footer class="bg-info">
          <div class="container">
              <div class="row">
+               
                  <div class="col-md-12 text-center text-white">
-                    <i class="fab fa-facebook-square"></i>
+                  <a href="https://www.instagram.com/ayur_one_official/?hl=en" class="fab fa-facebook-square text-white" style="text-decoration: none;">
+                    
+                  </a>
                     <i class="fab fa-instagram"></i>
                     <i class="fab fa-linkedin"></i>
 
